# timezones-and-regular-expressions

./: main.py  pyproject.toml  settings.toml
data/: example.txt
db/: database.py  models.py
dto/: schemas.py
parsers/: birthday_parser.py
readers/: file_reader.py
reporter/: birthday_reporter.py
service/: crud.py  timezones.py
